--- a/src/components/hour-sub-form.html
+++ b/src/components/hour-sub-form.html
@@ -792,7 +792,7 @@
                     <h5 class="card-title">
                       Teaching Assistant Duties Form
                     </h5>
-                    <h6>
+                    <h6 class="card-subtitle">
                       Article 17.1 – Dalhousie / CUPE 3912 Collective Agreement
                       (^)
                     </h6>
