--- a/src/styles/architectui-html-free/architectui-html-free/main.unminified.css
+++ b/src/styles/architectui-html-free/architectui-html-free/main.unminified.css
@@ -4340,7 +4340,7 @@ input[type="button"].btn-block {
 .navbar-dark .navbar-text a:focus {
     color: #fff;
 }
-.card {
+. {
     position: relative;
     display: flex;
     flex-direction: column;
