--- a/src/components/login.html
+++ b/src/components/login.html
@@ -1,72 +1,112 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Language" content="en" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>
+      DALTAMS - Dalhousie Computer Science.
+    </title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="Build whatever layout you need with our Architect framework."
+    />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <!--
+    =========================================================
+    * ArchitectUI HTML Theme Dashboard - v1.0.0
+    =========================================================
+    * Product Page: https://dashboardpack.com
+    * Copyright 2019 DashboardPack (https://dashboardpack.com)
+    * Licensed under MIT (https://github.com/DashboardPack/architectui-html-theme-free/blob/master/LICENSE)
+    =========================================================
+    * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+    -->
+    <link
+      href="../styles/architectui-html-free/architectui-html-free/main.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Login</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../styles/concept/assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link href="../styles/concept/assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/concept/assets/libs/css/style.css">
-    <link rel="stylesheet" href="../styles/concept/assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
-    <style>
-    html,
-    body {
-        height: 100%;
-    }
-
-    body {
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-align: center;
-        align-items: center;
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-    </style>
-</head>
-
-<body>
-    <!-- ============================================================== -->
-    <!-- login page  -->
-    <!-- ============================================================== -->
-    <div class="splash-container">
-        <div class="card ">
-            <div class="card-header text-center"><h1>DALTAMS</h1><span class="splash-description">Please enter your log in information.</span></div>
-            <div class="card-body">
-                <form>
-                    <div class="form-group">
-                        <input class="form-control form-control-lg" id="username" type="text" placeholder="NetID" autocomplete="off">
+  <body>
+    <div
+      class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header"
+    >
+      <div class="app-main">
+        <div class="app-main__outer">
+          <div class="app-main__inner">
+            <div class="app-page-title">
+              <div class="page-title-wrapper">
+                <div class="page-title-heading">
+                  <div class="page-title-icon">
+                    <i class="pe-7s-graph text-success"> </i>
+                  </div>
+                  <div>
+                    DALTAMS
+                    <div class="page-title-subheading">
+                      Dalhousie University - Computer Science.
                     </div>
-                    <div class="form-group">
-                        <input class="form-control form-control-lg" id="password" type="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label class="custom-control custom-checkbox">
-                            <input class="custom-control-input" type="checkbox"><span class="custom-control-label">Remember Me</span>
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Log in</button>
-                </form>
-            </div>
-            <div class="card-footer bg-white p-0  ">
-                <div class="card-footer-item card-footer-item-bordered">
-                    <a href="#" class="footer-link">Register</a></div>
-                <div class="card-footer-item card-footer-item-bordered">
-                    <a href="#" class="footer-link">Forgot Password</a>
+                  </div>
                 </div>
+              </div>
             </div>
+            <div class="tab-content">
+              <div
+                class="tab-pane tabs-animation fade show active"
+                id="tab-content-0"
+                role="tabpanel"
+              >
+                <div class="main-card mb-3 card">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      Enter your NetID and Password
+                    </h5>
+                    <form class="">
+                      <div class="form-row">
+                        <div class="col-md-6">
+                          <div class="position-relative form-group">
+                            <label for="validationCustomUsername" class="">Username</label
+                            ><input type="text"
+                            class="form-control" id="validationCustomUsername"
+                            placeholder="username placeholder"
+                            aria-describedby="inputGroupPrepend" required>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-row">
+                        <div class="col-md-6">
+                          <div class="position-relative form-group">
+                            <label for="examplePassword11" class=""
+                              >Password</label
+                            ><input
+                              name="password"
+                              id="examplePassword11"
+                              placeholder="password placeholder"
+                              type="password"
+                              class="form-control"
+
+                            />
+                          </div>
+                        </div>
+                      </div>
+                      <button class="mt-2 btn btn-primary">Sign in</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-
-    <!-- ============================================================== -->
-    <!-- end login page  -->
-    <!-- ============================================================== -->
-    <!-- Optional JavaScript -->
-    <script src="../styles/concept/assets/vendor/jquery/jquery-3.3.1.min.js"></script>
-    <script src="../styles/concept/assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
-</body>
-
+    <script
+      type="text/javascript"
+      src="../styles/architectui-html-free/architectui-html-free/assets/scripts/main.js"
+    ></script>
+  </body>
 </html>
