update profile card

--- a/src/components/profile-section.html
+++ b/src/components/profile-section.html
@@ -2,8 +2,8 @@
     <div class="card-body">
         <h5 class="card-title">Name</h5>
         <h6 class="card-subtitle">Year?</h6>
-        <pre>B00: B00821913   Email:ab12345@dal.ca    Phone:(123) 456 789</pre>
-        <p>Documents: </p> <a>3 Cover Letters </a> <a>Resume</a>        
+        <pre>B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre>
+        <p>Documents: </p> <a>3 Cover Letters </a>, <a>Resume</a>        
     </div>
 </div>
 
