--- a/src/components/profile-section.html
+++ b/src/components/profile-section.html
@@ -3,7 +3,8 @@
         <h5 class="card-title">Name</h5>
         <h6 class="card-subtitle">Year?</h6>
         <pre>B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre>
-        <p>Documents: </p> <a>3 Cover Letters </a>, <a>Resume</a>        
+        <p>Documents: <a>3 Cover Letters </a>, <a>Resume</a> </p> 
+        <p>Courses: CSCI 1234, CSCI 5678</p>        
     </div>
 </div>
 
