--- a/src/components/hour-evaluation.html
+++ b/src/components/hour-evaluation.html
@@ -569,29 +569,41 @@
                       <thead>
                         <tr>
                           <th>#</th>
-                          <th>First Name</th>
-                          <th>Last Name</th>
-                          <th>Username</th>
+                          <th>Full Name</th>
+                          <th>B00#</th>
+                          <th>Course ID</th>
+                          <th>CRN</th>
+                          <th>Submission Time</th>
+                          <th>Status</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
                           <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
+                          <td>Mark Otto</td>
+                          <td>B00891215</td>
+                          <td>CSCI 1180</td>
+                          <td>108050</td>
+                          <td>12:30PM, Jan 18, 2020</td>
+                          <td>Approved</td>
                         </tr>
                         <tr>
                           <th scope="row">2</th>
-                          <td>Jacob</td>
-                          <td>Thornton</td>
-                          <td>@fat</td>
+                          <td>Sreya Goshal</td>
+                          <td>B00891216</td>
+                          <td>CSCI 1183</td>
+                          <td>108051</td>
+                          <td>12:00AM, Jan 20, 2020</td>
+                          <td>Declined</td>
                         </tr>
                         <tr>
                           <th scope="row">3</th>
-                          <td>Larry</td>
-                          <td>the Bird</td>
-                          <td>@twitter</td>
+                          <td>Hassan Saleh</td>
+                          <td>B00891217</td>
+                          <td>CSCI 1186</td>
+                          <td>108052</td>
+                          <td>4:30AM, Jan 5, 2020</td>
+                          <td>Pending</td>
                         </tr>
                       </tbody>
                     </table>
@@ -610,29 +622,41 @@
                       <thead>
                         <tr>
                           <th>#</th>
-                          <th>First Name</th>
-                          <th>Last Name</th>
-                          <th>Username</th>
+                          <th>Full Name</th>
+                          <th>B00#</th>
+                          <th>Course ID</th>
+                          <th>CRN</th>
+                          <th>Submission Time</th>
+                          <th>Status</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
                           <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
+                          <td>Mark Otto</td>
+                          <td>B00891215</td>
+                          <td>CSCI 1180</td>
+                          <td>108050</td>
+                          <td>12:30PM, Jan 18, 2020</td>
+                          <td>Approved</td>
                         </tr>
                         <tr>
                           <th scope="row">2</th>
-                          <td>Jacob</td>
-                          <td>Thornton</td>
-                          <td>@fat</td>
+                          <td>Sreya Goshal</td>
+                          <td>B00891216</td>
+                          <td>CSCI 1183</td>
+                          <td>108051</td>
+                          <td>12:00AM, Jan 20, 2020</td>
+                          <td>Declined</td>
                         </tr>
                         <tr>
                           <th scope="row">3</th>
-                          <td>Larry</td>
-                          <td>the Bird</td>
-                          <td>@twitter</td>
+                          <td>Hassan Saleh</td>
+                          <td>B00891217</td>
+                          <td>CSCI 1186</td>
+                          <td>108052</td>
+                          <td>4:30AM, Jan 5, 2020</td>
+                          <td>Pending</td>
                         </tr>
                       </tbody>
                     </table>
