Add table of course list for TA and Prof

--- a/src/components/login.html
+++ b/src/components/login.html
@@ -31,6 +31,13 @@
       href="../styles/architectui-html-free/architectui-html-free/main.css"
       rel="stylesheet"
     />
+    <style>
+      .main-card {
+        margin: 0 auto !important;
+        float: none !important;
+        margin-bottom: 10px !important;
+      }
+    </style>
   </head>
 
   <body>
@@ -61,7 +68,7 @@
                 id="tab-content-0"
                 role="tabpanel"
               >
-                <div class="main-card mb-3 card">
+                <div class="main-card mb-3 mr-xl-5 card">
                   <div class="card-body">
                     <h5 class="card-title">
                       Enter your NetID and Password
