Changed the grading names

--- a/src/components/hour-evaluation.html
+++ b/src/components/hour-evaluation.html
@@ -575,6 +575,7 @@
                           <th>CRN</th>
                           <th>Submission Time</th>
                           <th>Status</th>
+                          <th>Details</th>
                         </tr>
                       </thead>
                       <tbody>
