--- a/src/components/ta-feedback.html
+++ b/src/components/ta-feedback.html
@@ -783,7 +783,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Feedback Statistics</h5>
                       <div class="text-left">Organisation</div>
-                      <div class="text-center">1 of 5</div>
+                      <div class="text-center">Poor</div>
                       <div class="mb-3 progress">
                         <div
                           class="progress-bar bg-danger"
@@ -795,7 +795,7 @@
                         ></div>
                       </div>
                       <div class="text-left">Teamwork</div>
-                      <div class="text-center">2 of 5</div>
+                      <div class="text-center">Okay</div>
                       <div class="mb-3 progress">
                         <div
                           class="progress-bar bg-warning"
@@ -807,7 +807,7 @@
                         ></div>
                       </div>
                       <div class="text-left">Time Management</div>
-                      <div class="text-center">3 of 5</div>
+                      <div class="text-center">Moderate</div>
                       <div class="mb-3 progress">
                         <div
                           class="progress-bar bg-info"
@@ -819,7 +819,7 @@
                         ></div>
                       </div>
                       <div class="text-left">Course Knowledge</div>
-                      <div class="text-center">4 of 5</div>
+                      <div class="text-center">Good</div>
                       <div class="mb-3 progress">
                         <div
                           class="progress-bar"
@@ -831,7 +831,7 @@
                         ></div>
                       </div>
                       <div class="text-left">Student Engagement</div>
-                      <div class="text-center">5 of 5</div>
+                      <div class="text-center">Excellent</div>
                       <div class="mb-3 progress">
                         <div
                           class="progress-bar bg-success"
@@ -842,8 +842,8 @@
                           style="width: 100%;"
                         ></div>
                       </div>
-                      <div class="text-left">Organisation</div>
-                      <div class="text-center">1 of 5</div>
+                      <div class="text-left">X</div>
+                      <div class="text-center">Poor</div>
                       <div class="mb-3 progress">
                         <div
                           class="progress-bar bg-danger"
@@ -854,8 +854,8 @@
                           style="width: 20%;"
                         ></div>
                       </div>
-                      <div class="text-left">Organisation</div>
-                      <div class="text-center">1 of 5</div>
+                      <div class="text-left">Y</div>
+                      <div class="text-center">Poor</div>
                       <div class="mb-3 progress">
                         <div
                           class="progress-bar bg-danger"
