add job information and upload card

--- a/src/components/profile-section.html
+++ b/src/components/profile-section.html
@@ -1,3 +1,4 @@
+<!--A profile card that is displayed on the main dashboard-->
 <link href="../styles/architectui-html-free/architectui-html-free/main.css" rel="stylesheet"/>
 <div class="main-card mb-3 card">
     <div class="card-body">
