--- a/src/components/tags.html
+++ b/src/components/tags.html
@@ -1,3 +1,4 @@
+<!--Tags used to filter searches based on recents and all the tags available-->
 <link href="../styles/architectui-html-free/architectui-html-free/main.css" rel="stylesheet"/>
 <div class="main-card mb-3 card">
     <div class="card-body"><h5 class="card-title">Tags</h5><h6 class="card-subtitle">Click on a tag to filter job postings</h6><br>
