--- a/src/components/upload-card.html
+++ b/src/components/upload-card.html
@@ -1,3 +1,4 @@
+<!--A card that enables user to choose the type of document and upload it from their computer-->
 <link href="../styles/architectui-html-free/architectui-html-free/main.css" rel="stylesheet"/>
 <div class="main-card mb-3 card">
     <div class="card-header">Upload Documents</div>
