--- a/src/components/ta-feedback-ta-view.html
+++ b/src/components/ta-feedback-ta-view.html
@@ -28,11 +28,7 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 -->
     <link
-      href="../architectui-html-free/architectui-html-free/main.css"
-      rel="stylesheet"
-    />
-    <link
-      href="./bootstrap-slider/dist/css/bootstrap-slider.min.css"
+      href="../styles/architectui-html-free/architectui-html-free/main.css"
       rel="stylesheet"
     />
     <style type="text/css">
@@ -776,24 +772,13 @@
       <div class="app-main">
         <div class="app-main__outer">
           <div class="app-main__inner">
-            <div class="tab-content">
-              <div
-                class="tab-pane tabs-animation fade active show"
-                id="tab-content-0"
-                role="tabpanel"
-              >
-                <div class="col-md-6">
+            <div class="col-md-6">
+              <div class="main-card mb-3 card">
+                <div class="card-body">
+                  <h5 class="card-title">CSCI 1800</h5>
+                  <h6 class="card-subtitle">Feedback Statistics</h6>
                   <div class="main-card mb-3 card">
                     <div class="card-body">
-                      <h5 class="card-title">CSCI 1800</h5>
-                      <h6 class="card-subtitle">Feedback Statistics</h6>
-                      <input
-                        id="ex13"
-                        type="text"
-                        data-slider-ticks="[0, 100, 200, 300, 400]"
-                        data-slider-ticks-snap-bounds="30"
-                        data-slider-ticks-labels='["$0", "$100", "$200", "$300", "$400"]'
-                      />
                       <div class="text-left">Organisation</div>
                       <div class="text-center">Poor</div>
                       <div class="mb-3 progress">
@@ -878,170 +863,108 @@
                           style="width: 20%;"
                         ></div>
                       </div>
-                      <br />
-                      <br />
-                      <h5 class="card-subtitle">Professor Comments</h5>
-                      <div class="main-card mb-3 card">
-                        <div class="card-body">
-                          <div class="scroll-area-sm">
-                            <div class="scrollbar-container ps--active-y ps">
-                              <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. Vestibulum sodales ullamcorper
-                                vehicula. Duis placerat quam porta lorem
-                                lobortis, sit amet sodales mauris finibus. Donec
-                                posuere diam at volutpat viverra. Cras fringilla
-                                auctor augue sed congue. Maecenas mollis quis
-                                enim quis egestas. In sollicitudin mi a pretium
-                                varius. Integer eleifend sodales pharetra.
-                                Nullam vitae libero sem. Nulla et eros congue,
-                                tincidunt ante eu, tincidunt eros. Donec nisl
-                                purus, convallis a hendrerit ut, eleifend in
-                                lectus. Proin luctus dignissim lacus, in laoreet
-                                arcu eleifend non. Quisque viverra ipsum a massa
-                                porta convallis. Donec tincidunt imperdiet
-                                purus, interdum elementum ante commodo a.
-                                Quisque pharetra arcu sapien, vel ornare magna
-                                sollicitudin quis.
-                              </p>
-                              <p>
-                                Nunc congue magna eget eros blandit, eu viverra
-                                magna semper. Nullam in diam a metus dictum
-                                consequat. Quisque ultricies, ipsum non euismod
-                                semper, velit felis lacinia nibh, et finibus
-                                quam leo vitae nisi. Maecenas interdum diam quis
-                                risus bibendum, eu fermentum est pharetra. In
-                                dictum at enim pretium bibendum. Praesent
-                                efficitur iaculis dolor in sodales. Morbi
-                                maximus in ipsum in malesuada. Proin semper
-                                lacus tempor magna aliquam, sed aliquam dui
-                                scelerisque. Donec nisi nulla, rhoncus a
-                                tristique eget, ultrices vitae dolor. Ut id urna
-                                vitae ante tincidunt pharetra at non metus. Nunc
-                                in suscipit nulla. Sed vitae leo vulputate,
-                                euismod tortor vel, aliquet velit. Curabitur
-                                eget tincidunt elit. Nam et ligula finibus,
-                                eleifend velit et, commodo quam. Praesent non
-                                libero velit.
-                              </p>
-                              <p>
-                                Nunc congue magna eget eros blandit, eu viverra
-                                magna semper. Nullam in diam a metus dictum
-                                consequat. Quisque ultricies, ipsum non euismod
-                                semper, velit felis lacinia nibh, et finibus
-                                quam leo vitae nisi. Maecenas interdum diam quis
-                                risus bibendum, eu fermentum est pharetra. In
-                                dictum at enim pretium bibendum. Praesent
-                                efficitur iaculis dolor in sodales. Morbi
-                                maximus in ipsum in malesuada. Proin semper
-                                lacus tempor magna aliquam, sed aliquam dui
-                                scelerisque. Donec nisi nulla, rhoncus a
-                                tristique eget, ultrices vitae dolor. Ut id urna
-                                vitae ante tincidunt pharetra at non metus. Nunc
-                                in suscipit nulla. Sed vitae leo vulputate,
-                                euismod tortor vel, aliquet velit. Curabitur
-                                eget tincidunt elit. Nam et ligula finibus,
-                                eleifend velit et, commodo quam. Praesent non
-                                libero velit.
-                              </p>
-                              <p>
-                                Nunc congue magna eget eros blandit, eu viverra
-                                magna semper. Nullam in diam a metus dictum
-                                consequat. Quisque ultricies, ipsum non euismod
-                                semper, velit felis lacinia nibh, et finibus
-                                quam leo vitae nisi. Maecenas interdum diam quis
-                                risus bibendum, eu fermentum est pharetra. In
-                                dictum at enim pretium bibendum. Praesent
-                                efficitur iaculis dolor in sodales. Morbi
-                                maximus in ipsum in malesuada. Proin semper
-                                lacus tempor magna aliquam, sed aliquam dui
-                                scelerisque. Donec nisi nulla, rhoncus a
-                                tristique eget, ultrices vitae dolor. Ut id urna
-                                vitae ante tincidunt pharetra at non metus. Nunc
-                                in suscipit nulla. Sed vitae leo vulputate,
-                                euismod tortor vel, aliquet velit. Curabitur
-                                eget tincidunt elit. Nam et ligula finibus,
-                                eleifend velit et, commodo quam. Praesent non
-                                libero velit.
-                              </p>
-                              <div
-                                class="ps__rail-x"
-                                style="left: 0px; bottom: -945px;"
-                              >
-                                <div
-                                  class="ps__thumb-x"
-                                  tabindex="0"
-                                  style="left: 0px; width: 0px;"
-                                ></div>
-                              </div>
-                              <div
-                                class="ps__rail-y"
-                                style="top: 945px; height: 200px; right: 0px;"
-                              >
-                                <div
-                                  class="ps__thumb-y"
-                                  tabindex="0"
-                                  style="top: 166px; height: 34px;"
-                                ></div>
-                              </div>
-                            </div>
+                    </div>
+                  </div>
+
+                  <h5 class="card-subtitle">Professor Comments</h5>
+                  <div class="main-card mb-3 card">
+                    <div class="card-body">
+                      <div class="scroll-area-sm">
+                        <div class="scrollbar-container ps--active-y ps">
+                          <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Vestibulum sodales ullamcorper vehicula. Duis
+                            placerat quam porta lorem lobortis, sit amet sodales
+                            mauris finibus. Donec posuere diam at volutpat
+                            viverra. Cras fringilla auctor augue sed congue.
+                            Maecenas mollis quis enim quis egestas. In
+                            sollicitudin mi a pretium varius. Integer eleifend
+                            sodales pharetra. Nullam vitae libero sem. Nulla et
+                            eros congue, tincidunt ante eu, tincidunt eros.
+                            Donec nisl purus, convallis a hendrerit ut, eleifend
+                            in lectus. Proin luctus dignissim lacus, in laoreet
+                            arcu eleifend non. Quisque viverra ipsum a massa
+                            porta convallis. Donec tincidunt imperdiet purus,
+                            interdum elementum ante commodo a. Quisque pharetra
+                            arcu sapien, vel ornare magna sollicitudin quis.
+                          </p>
+                          <p>
+                            Nunc congue magna eget eros blandit, eu viverra
+                            magna semper. Nullam in diam a metus dictum
+                            consequat. Quisque ultricies, ipsum non euismod
+                            semper, velit felis lacinia nibh, et finibus quam
+                            leo vitae nisi. Maecenas interdum diam quis risus
+                            bibendum, eu fermentum est pharetra. In dictum at
+                            enim pretium bibendum. Praesent efficitur iaculis
+                            dolor in sodales. Morbi maximus in ipsum in
+                            malesuada. Proin semper lacus tempor magna aliquam,
+                            sed aliquam dui scelerisque. Donec nisi nulla,
+                            rhoncus a tristique eget, ultrices vitae dolor. Ut
+                            id urna vitae ante tincidunt pharetra at non metus.
+                            Nunc in suscipit nulla. Sed vitae leo vulputate,
+                            euismod tortor vel, aliquet velit. Curabitur eget
+                            tincidunt elit. Nam et ligula finibus, eleifend
+                            velit et, commodo quam. Praesent non libero velit.
+                          </p>
+                          <p>
+                            Nunc congue magna eget eros blandit, eu viverra
+                            magna semper. Nullam in diam a metus dictum
+                            consequat. Quisque ultricies, ipsum non euismod
+                            semper, velit felis lacinia nibh, et finibus quam
+                            leo vitae nisi. Maecenas interdum diam quis risus
+                            bibendum, eu fermentum est pharetra. In dictum at
+                            enim pretium bibendum. Praesent efficitur iaculis
+                            dolor in sodales. Morbi maximus in ipsum in
+                            malesuada. Proin semper lacus tempor magna aliquam,
+                            sed aliquam dui scelerisque. Donec nisi nulla,
+                            rhoncus a tristique eget, ultrices vitae dolor. Ut
+                            id urna vitae ante tincidunt pharetra at non metus.
+                            Nunc in suscipit nulla. Sed vitae leo vulputate,
+                            euismod tortor vel, aliquet velit. Curabitur eget
+                            tincidunt elit. Nam et ligula finibus, eleifend
+                            velit et, commodo quam. Praesent non libero velit.
+                          </p>
+                          <p>
+                            Nunc congue magna eget eros blandit, eu viverra
+                            magna semper. Nullam in diam a metus dictum
+                            consequat. Quisque ultricies, ipsum non euismod
+                            semper, velit felis lacinia nibh, et finibus quam
+                            leo vitae nisi. Maecenas interdum diam quis risus
+                            bibendum, eu fermentum est pharetra. In dictum at
+                            enim pretium bibendum. Praesent efficitur iaculis
+                            dolor in sodales. Morbi maximus in ipsum in
+                            malesuada. Proin semper lacus tempor magna aliquam,
+                            sed aliquam dui scelerisque. Donec nisi nulla,
+                            rhoncus a tristique eget, ultrices vitae dolor. Ut
+                            id urna vitae ante tincidunt pharetra at non metus.
+                            Nunc in suscipit nulla. Sed vitae leo vulputate,
+                            euismod tortor vel, aliquet velit. Curabitur eget
+                            tincidunt elit. Nam et ligula finibus, eleifend
+                            velit et, commodo quam. Praesent non libero velit.
+                          </p>
+                          <div
+                            class="ps__rail-x"
+                            style="left: 0px; bottom: -945px;"
+                          >
+                            <div
+                              class="ps__thumb-x"
+                              tabindex="0"
+                              style="left: 0px; width: 0px;"
+                            ></div>
+                          </div>
+                          <div
+                            class="ps__rail-y"
+                            style="top: 945px; height: 200px; right: 0px;"
+                          >
+                            <div
+                              class="ps__thumb-y"
+                              tabindex="0"
+                              style="top: 166px; height: 34px;"
+                            ></div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="tab-pane tabs-animation fade"
-                id="tab-content-1"
-                role="tabpanel"
-              >
-                <div class="main-card mb-3 card">
-                  <div class="card-body">
-                    <h5 class="card-title">Marker Hours Approval</h5>
-                    <table class="mb-0 table table-hover">
-                      <thead>
-                        <tr>
-                          <th>#</th>
-                          <th>Full Name</th>
-                          <th>B00#</th>
-                          <th>Course ID</th>
-                          <th>CRN</th>
-                          <th>Submission Time</th>
-                          <th>Status</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>Mark Otto</td>
-                          <td>B00891215</td>
-                          <td>CSCI 1180</td>
-                          <td>108050</td>
-                          <td>12:30PM, Jan 18, 2020</td>
-                          <td>Approved</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">2</th>
-                          <td>Sreya Goshal</td>
-                          <td>B00891216</td>
-                          <td>CSCI 1183</td>
-                          <td>108051</td>
-                          <td>12:00AM, Jan 20, 2020</td>
-                          <td>Declined</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>Hassan Saleh</td>
-                          <td>B00891217</td>
-                          <td>CSCI 1186</td>
-                          <td>108052</td>
-                          <td>4:30AM, Jan 5, 2020</td>
-                          <td>Pending</td>
-                        </tr>
-                      </tbody>
-                    </table>
                   </div>
                 </div>
               </div>
@@ -1163,14 +1086,6 @@
 
     <div class="jvectormap-tip"></div>
     <!-- Code injected by live-server -->
-    <script src="./bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-    <script>
-      var slider = new Slider("#ex13", {
-        ticks: [0, 100, 200, 300, 400],
-        ticks_labels: ["$0", "$100", "$200", "$300", "$400"],
-        ticks_snap_bounds: 30,
-      });
-    </script>
     <script type="text/javascript">
       // <![CDATA[  <-- For SVG support
       if ("WebSocket" in window) {
