align both tables in job info page

--- a/src/components/job-information.html
+++ b/src/components/job-information.html
@@ -5,7 +5,7 @@
 <div class="main-card mb-3 card">
     <div class="card-body">
         <h5 class="card-title">Application Information</h5>
-        <table class="mb-0 table table-bordered">
+        <table class="mb-0 table table-bordered col-lg-6">
             <thead>
             <tr>
                 <th>Application Deadline:</th>
@@ -38,10 +38,10 @@
 <div class="main-card mb-3 card">
     <div class="card-body">
         <h5 class="card-title">Professor Information</h5>
-        <table class="mb-0 table table-bordered">
+        <table class="mb-0 table table-bordered col-lg-6">
             <thead>
             <tr>
-                <th>Salutation</th>
+                <th>Salutation:</th>
                 <td>Mr</td>
             </tr>
             <tr>
